[package]
name = "cooplan-auth"
version = "0.1.2"
edition = "2021"
description = "Basic utlity for token management meant to be used with OpenId Connect"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Third party dependencies

# Async runtime
tokio = { version = "1", features = ["full"] }

# JSON
serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.82"

# JWT
jsonwebtoken = "8"

# HTTP
reqwest = { version = "0.11", features = ["json"] }